# computer_vision_project

./: CMakeLists.txt  main.cpp  vc.c  vc.h
